--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "axios": "^1.11.0",
     "dotenv": "^17.0.1",
     "ejs": "^3.1.10",
+    "elevenlabs-latency": "^0.0.6",
     "express": "^5.1.0",
     "socket.io": "^4.8.1",
-    "socket.io-client": "^4.8.1"
+    "socket.io-client": "^4.8.1",
+    "ws": "^8.18.3"
   }
 }
